# amazon-eventbridge-resource-policy-samples

./: .gitignore  README.md  pyproject.toml
account-a-web-store/: README.md  publish.sh  template.yaml
account-a-web-store/events/: put_events.json
account-a-web-store/order_function/: app.py
account-b-central-bus/: README.md  central-event-bus-resource-policy.json
account-c-invoice-processing/: README.md
account-c-invoice-processing/invoice_processing/schema/com_examplecorp_webstore/newordercreated/: marshaller.py
blog/: BLOG.md  README.md  pyproject.toml
blog/account-a-web-store/: README.md  template.yaml
blog/account-a-web-store/events/: put_events_cli.json
blog/account-a-web-store/order_function/: requirements.txt
blog/account-b-central-bus/: README.md  template.yaml
blog/account-c-invoice-processing/: README.md  conftest.py  template.yaml
blog/account-c-invoice-processing/events/: event.json
blog/account-c-invoice-processing/invoice_processing/: requirements.txt
blog/account-c-invoice-processing/invoice_processing/invoice_processing_function/: app.py
blog/account-c-invoice-processing/invoice_processing/schema/com_examplecorp_webstore/newordercreated/: AWSEvent.py  NewOrderCreated.py  NewOrderCreatedItem.py  __init__.py
patterns/: PATTERNS.md  README.md
patterns/cross-account-pattern/: Makefile  README.md
patterns/cross-account-pattern/applications/account_1/: template.yaml
patterns/cross-account-pattern/applications/account_2/: template.yaml
patterns/cross-account-pattern/destination_account/account_111111111111/: template.yaml
patterns/cross-account-pattern/security/account_1/: __samconfig.txt  eu-central-1-rules.yaml  template.yaml  us-east-1-rules.yaml
patterns/cross-account-pattern/source_accounts/account_111111111111/: template.yaml
patterns/cross-account-pattern/source_accounts/account_2222222222222/: template.yaml
patterns/cross-account-pattern/source_accounts/account_333333333333/: template.yaml
patterns/cross-region-cross-account-pattern/: Makefile  README.md
patterns/cross-region-cross-account-pattern/applications/account_1/: template.yaml
patterns/cross-region-cross-account-pattern/applications/account_2/: events.json
patterns/cross-region-cross-account-pattern/applications/account_3/: events.json  template.yaml
patterns/cross-region-cross-account-pattern/security/account_1/: eu-central-1-rules.yaml  template.yaml
patterns/multi-bus-multi-account-pattern/: Makefile  README.md
patterns/multi-bus-multi-account-pattern/blue-service-account/blue-service-app/: Makefile  README.md  pyproject.toml  subscriptions.yaml  template.yaml
patterns/multi-bus-multi-account-pattern/blue-service-account/blue-service-app/blue_p_e1/: app.py
patterns/multi-bus-multi-account-pattern/orange-service-account/orange-service-app/: README.md  pyproject.toml  subscriptions.yaml  template.yaml
patterns/multi-bus-multi-account-pattern/orange-service-account/orange-service-app/orange_p_e3/: app.py  requirements.txt
patterns/multi-bus-multi-account-pattern/purple-service-account/purple-service-app/: Makefile  README.md  pyproject.toml  subscriptions.yaml  template.yaml
patterns/multi-bus-multi-account-pattern/purple-service-account/purple-service-app/purple_p_e2/: app.py  requirements.txt
patterns/multi-bus-multi-account-pattern/purple-service-account/purple-service-app/purple_s_e3/: requirements.txt
patterns/single-bus-multi-account-pattern/: README.md
patterns/single-bus-multi-account-pattern/blue-service-account/blue-service-app/: Makefile  README.md  pyproject.toml  template.yaml
patterns/single-bus-multi-account-pattern/blue-service-account/blue-service-app/blue_p_e1/: requirements.txt
patterns/single-bus-multi-account-pattern/blue-service-account/blue-service-app/blue_s_e2/: requirements.txt
patterns/single-bus-multi-account-pattern/blue-service-account/blue-service-app/events/: event.json
patterns/single-bus-multi-account-pattern/devops-account/: template.yaml
patterns/single-bus-multi-account-pattern/orange-service-account/orange-service-app/: Makefile  README.md  pyproject.toml  template.yaml
patterns/single-bus-multi-account-pattern/orange-service-account/orange-service-app/orange_p_e3/: requirements.txt
patterns/single-bus-multi-account-pattern/orange-service-account/orange-service-app/orange_s_e2/: app.py  requirements.txt
patterns/single-bus-multi-account-pattern/purple-service-account/purple-service-app/: Makefile  README.md  pyproject.toml  template.yaml
patterns/single-bus-multi-account-pattern/purple-service-account/purple-service-app/purple_p_e2/: app.py
patterns/single-bus-multi-account-pattern/purple-service-account/purple-service-app/purple_s_e1/: app.py  requirements.txt
patterns/single-bus-multi-account-pattern/purple-service-account/purple-service-app/purple_s_e3/: app.py
