[tool.poetry]
name = "amazon-eventbridge-resource-policy-samples"
version = "0.1.0"
description = "Sample implementation that demonstrates how to apply Amazon EventBridge resource policies in cross account scenarios"
authors = ["Stephen Liedig <sliedig@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.100"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
