[tool.poetry]
name = "amazon-eventbridge-resource-policy-samples"
version = "0.1.0"
description = "Sample implementation that demonstrates how to apply Amazon EventBridge resource policies in cross account scenarios"
authors = ["Stephen Liedig <sliedig@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.41.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
