[tool.poetry]
name = "blue-service-app"
version = "0.1.0"
description = "Blue service app for multi-bus multi-account pattern"
authors = ["Stephen Liedig <sliedig@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.33.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
