[tool.poetry]
name = "orange-service-app"
version = "0.1.0"
description = "Orange service app for multi-bus multi-account pattern"
authors = ["Stephen Liedig <sliedig@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
