[tool.poetry]
name = "purple-service-app"
version = "0.1.0"
description = "Purple service app for multi-bus multi-account pattern"
authors = ["Stephen Liedig <sliedig@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.25"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
