[tool.poetry]
name = "blue-service-app"
version = "0.1.0"
description = "Blue service app for single-bus multi-account pattern"
authors = ["Stephen Liedig <sliedig@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.41.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
