[tool.poetry]
name = "purple-service-app"
version = "0.1.0"
description = "Purple service app for single-bus multi-account pattern"
authors = ["Stephen Liedig <sliedig@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.100"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
